# roguelike_tutorial

./: .clog.toml  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  changelog.md
benches/: fov.rs  level_gen.rs  matrix.rs  mock.rs  uniquness.rs
ci/: bench.sh  coverage.sh
proptest-regressions/: levels.txt
proptest-regressions/data/structures/: matrix.txt  pos.txt
proptest-regressions/levels/generators/: mod.txt
src/: common.rs  levels.rs  lib.rs  main.rs
src/common/: ai.rs  fov.rs  gen.rs  mod.rs  query.rs  validations.rs
src/compatibility/: doryen.rs  mod.rs  tcod.rs
src/data/: components.rs  mod.rs  structures.rs
src/data/components/: builder.rs  mod.rs
src/data/structures/: dim.rs  generation.rs  level_data.rs  matrix.rs  mod.rs  pos.rs  world_data.rs
src/data/structures/level_data/: corridor.rs  mod.rs  room.rs
src/levels/: functions.rs  generators.rs  mod.rs  races.rs
src/levels/generators/: mod.rs  mosters.rs
src/systems/: mod.rs  validation.rs
src/systems/logic/: ai.rs  clean.rs  damage.rs  fov.rs  mod.rs
src/systems/render/: console.rs  doryen.rs  mod.rs
src/ui/: keymapper.rs  mod.rs
