[package]
name = "rogue_tutorial"
version = "0.1.0"
authors = ["Yuriy Taras <ytaras@softserveinc.com>"]

[dependencies]
doryen-rs="0.1.0"
specs="0.14.1"
specs-derive="0.3.0"
itertools="0.7.11"
shred="0.7.1"

[dev-dependencies]
proptest="0.8.7"

[badges]
travis-ci = { repository = "ytaras/rogue_tutorial" }
coveralls = { repository = "ytaras/rogue_tutorial", service = "github" }
maintenance = { status = "experimental" }