[package]
name = "rogue_tutorial"
version = "0.3.2"
authors = ["Yuriy Taras <ytaras@softserveinc.com>"]
publish = false
edition = "2018"

[features]
render_tcod = []
render_doryen = ["doryen-rs"]

[dependencies]
doryen-rs= {version ="0.1.0", optional = true}
specs="0.14.1"
specs-derive="0.3.0"
itertools="0.8.0"
shred="0.7.1"
#tcod = "0.12.1"
tcod = { git = "https://github.com/rjungemann/tcod-rs.git", branch = "fix-sdl2-rendering-mojave" }
log = "0.4.6"
pretty_env_logger = "0.3.0"
rand = "0.6.1"

[dev-dependencies]
proptest="0.8.7"

[badges]
travis-ci = { repository = "ytaras/rogue_tutorial" }
coveralls = { repository = "ytaras/rogue_tutorial", service = "github" }
maintenance = { status = "experimental" }

[[bin]]
name = "tcod"
path = "src/bin/tcod.rs"
required-features = ["render_tcod"]

[[bin]]
name = "doryen"
path = "src/main.rs"
required-features = ["render_doryen"]
